Refactored swagger and routes
